--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,22 @@
     <string name="theme_system">System Default</string>
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
+    
+    <!-- App Detail -->
+    <string name="btn_info">App Info</string>
+    <string name="app_icon_desc">App Icon</string>
+    <string name="status_frozen">Frozen</string>
+    <string name="detail_version_format">v%1$s (%2$d)</string>
+    <string name="detail_app_size">App Size</string>
+    <string name="detail_install_path">Install Path</string>
+    <string name="detail_installed">Installed</string>
+    <string name="detail_updated">Last Updated</string>
+    <string name="detail_status">Status</string>
+    <string name="detail_quick_actions">Quick Actions</string>
+    <string name="detail_open_settings">Open in System Settings</string>
+    <string name="action_disable">Disable</string>
+    <string name="action_enable">Enable</string>
+    <string name="error_load_app_info">Failed to load app info</string>
+    <string name="error_open_settings">Could not open settings</string>
+    <string name="action_failed_generic">Action failed</string>
 </resources>
