--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,9 @@
     <!-- Errors -->
     <string name="error_open_autostart">Could not open Autostart settings</string>
     <string name="error_open_battery">Could not open Battery settings</string>
+    <string name="error_protected_app">This is a protected security app. Only Force Stop is allowed.</string>
+    <string name="error_no_valid_apps">No valid apps to perform this action</string>
+    <string name="warning_force_stop_only">%d security app(s) skipped - only Force Stop allowed</string>
     
     <!-- Actions -->
     <string name="action_freeze">Freeze</string>
