--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="btn_start">Start</string>
     <string name="btn_check">Check</string>
     <string name="btn_checking">Checking...</string>
+    <string name="status_access_granted">Access Granted</string>
     <string name="btn_get">Get</string>
     <string name="btn_grant">Grant</string>
     <string name="root_granted">Root access granted!</string>
