--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -267,6 +267,8 @@
     <string name="activity_launcher_subtitle">Tap app to expand, tap activity to launch</string>
     <string name="activity_launcher_count">%1$d apps • %2$d activities</string>
     <string name="search_hint">Search apps or activities…</string>
+    <string name="search_apps_hint">Search apps…</string>
+    <string name="search_no_results">No apps found</string>
     <string name="btn_expand">Expand</string>
     
     <!-- Accessibility -->
