Redesign App Detail quick actions with categorized grid - Replace ChipGroup with GridLayout (3 columns) - Add separate Allow Background and Restrict Background buttons - Add Danger Zone section for destructive actions (Clear Data, Uninstall) - Use MaterialButton with icon on top for cleaner look - Show/hide background buttons based on current status

--- a/app/src/main/res/values-id/strings.xml
+++ b/app/src/main/res/values-id/strings.xml
@@ -64,6 +64,7 @@
     <string name="action_allow_bg">Izinkan Latar Belakang</string>
     <string name="action_clear_cache">Hapus Cache</string>
     <string name="action_clear_data">Hapus Data</string>
+    <string name="action_danger_zone">Zona Bahaya</string>
     <string name="action_execute">Jalankan</string>
     <string name="action_launch">Buka</string>
     
