--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -306,6 +306,7 @@
     <!-- Quick Actions -->
     <string name="action_clear_cache">Clear Cache</string>
     <string name="action_clear_data">Clear Data</string>
+    <string name="action_danger_zone">Danger Zone</string>
     <string name="action_launch">Launch</string>
     <string name="action_launch_apps">Launch Apps</string>
     <string name="error_no_launcher">App has no launcher activity</string>
