feat: enhanced app detail - background state (RUN_IN/ANY), AOSP info button, cleaner UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,6 +187,8 @@
     <string name="detail_system_app">System App</string>
     <string name="detail_user_app">User App</string>
     <string name="detail_quick_actions">Quick Actions</string>
+    <string name="detail_bg_state">Background State</string>
+    <string name="action_aosp_info">AOSP Info</string>
     <string name="detail_open_settings">Open in System Settings</string>
     <string name="action_disable">Disable</string>
     <string name="action_enable">Enable</string>
